--- a/src/_templ/home/pass_hash_verify.html
+++ b/src/_templ/home/pass_hash_verify.html
@@ -31,7 +31,7 @@
   </label>
   <button type="submit">Verify</button>
   <div>
-    Output
+    <strong>Output :-</strong>
     <div id="pass_hash_verify_out"></div>
   </div>
 </form>
