--- a/src/_templ/home/salt.html
+++ b/src/_templ/home/salt.html
@@ -1,4 +1,4 @@
-<div>Salt is 32 character long random value</div>
+<small>Salt is 32 character long random value</small>
 <a
   href="#"
   hx-post="/salt"
