--- a/src/_templ/home/hash.html
+++ b/src/_templ/home/hash.html
@@ -22,12 +22,11 @@
     </div>
   </div>
   <small style="margin-top: 2px">
-    Hash of type 256 is of length 64 and of type 512 is of length 128. SHA3 is a
-    imporved version of SHA algorithm.
+    Hash of type 256 is of length 64 and of type 512 is of length 128.
   </small>
   <label>
     Enter Text to Hash
-    <textarea name="text" required></textarea>
+    <textarea name="text" id="hash_input" required></textarea>
   </label>
   <button type="submit">Sumbit</button>
   <label>
