--- a/src/_templ/_base.html
+++ b/src/_templ/_base.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div class="container">{%- block body %}{% endblock -%}</div>
-    <script src="/htmx.js"></script>
+    <script defer src="/htmx.js"></script>
   </body>
 </html>
