--- a/src/_templ/bcrypt.html
+++ b/src/_templ/bcrypt.html
@@ -15,5 +15,5 @@
   <summary><strong>Bcrypt Salt</strong></summary>
   {% include "bcrypt/bcrypt_salt.html" %}
 </details>
-<script src="/scripts/copy_clear.js"></script>
+<script defer src="/scripts/copy_clear.js"></script>
 {% endblock %}
