--- a/src/_templ/home.html
+++ b/src/_templ/home.html
@@ -30,5 +30,5 @@
   <summary><strong>Password Hash Verifier</strong></summary>
   {% include "home/pass_hash_verify.html" %}
 </details>
-<script src="/scripts/copy_clear.js"></script>
+<script defer src="/scripts/copy_clear.js"></script>
 {% endblock %}
