--- a/src/_templ/bcrypt.html
+++ b/src/_templ/bcrypt.html
@@ -5,15 +5,14 @@
 <h4>Bcrypt</h4>
 <details>
   <summary><strong>Bcrypt Hash</strong></summary>
-  {% include "bcrypt/bcrypt_hash.html" %}
+  {% include "bcrypt/hash.html" %}
 </details>
 <details>
   <summary><strong>Bcrypt Hash Verifier</strong></summary>
-  {% include "bcrypt/bcrypt_hash_verify.html" %}
+  {% include "bcrypt/hash_verify.html" %}
 </details>
 <details>
   <summary><strong>Bcrypt Salt</strong></summary>
-  {% include "bcrypt/bcrypt_salt.html" %}
+  {% include "bcrypt/salt.html" %}
 </details>
-<script defer src="/scripts/copy_clear.js"></script>
 {% endblock %}
