--- a/src/_templ/bcrypt/salt.html
+++ b/src/_templ/bcrypt/salt.html
@@ -7,10 +7,14 @@
   onclick="event.preventDefault()"
   hx-trigger="click delay:200ms"
   hx-swap="innerHTML"
-  >Generate Salt</a
+  hx-indicator="#bcrypt_salt_spinner"
 >
+  Generate Salt
+</a>
 <label>
-  Generated Bcrypt Salt <span class="clear_btn" clear-target="#bcrypt_salt_out"></span>
+  Generated Bcrypt Salt
+  <span class="clear_btn" clear-target="#bcrypt_salt_out"></span>
   <span class="copy_btn" copy-target="#bcrypt_salt_out"></span>
+  <span class="spinner htmx-indicator" id="bcrypt_salt_spinner"></span>
   <textarea id="bcrypt_salt_out" rows="1" readonly></textarea>
 </label>
