--- a/src/_templ/home/base64.html
+++ b/src/_templ/home/base64.html
@@ -2,6 +2,7 @@
   hx-post="/base64"
   hx-target="#base64_out"
   hx-swap="innerHTML"
+  hx-indicator="#base64_spinner"
 >
   <div class="grid">
     <label>
@@ -22,6 +23,7 @@
     Output Text
     <span clear-target="#base64_out>textarea" class="clear_btn"></span>
     <span copy-target="#base64_out>textarea" class="copy_btn"></span>
+    <span class="spinner htmx-indicator" id="base64_spinner"></span>
     <div id="base64_out">
       <textarea readonly></textarea>
     </div>
