--- a/src/_templ/home/encrypt_decrypt.html
+++ b/src/_templ/home/encrypt_decrypt.html
@@ -2,6 +2,7 @@
   hx-post="/encrypt_decrypt"
   hx-target="#encrypt_decrypt_out"
   hx-swap="innerHTML"
+  hx-indicator="#encrypt_decrypt_spinner"
 >
   <div class="grid">
     <label>
@@ -26,6 +27,7 @@
     Output Text
     <span clear-target="#encrypt_decrypt_out>textarea" class="clear_btn"></span>
     <span copy-target="#encrypt_decrypt_out>textarea" class="copy_btn"></span>
+    <span class="spinner htmx-indicator" id="encrypt_decrypt_spinner"></span>
     <div id="encrypt_decrypt_out">
       <textarea readonly></textarea>
     </div>
