--- a/src/_templ/home/pass_hash.html
+++ b/src/_templ/home/pass_hash.html
@@ -1,7 +1,12 @@
 <small>
   Hashes by adding salt to text and then also appends salt into the hashed text.
 </small>
-<form hx-post="/pass_hash" hx-target="#pass_hash_out" hx-swap="innerHTML">
+<form
+  hx-post="/pass_hash"
+  hx-target="#pass_hash_out"
+  hx-swap="innerHTML"
+  hx-indicator="#pass_hash_spinner"
+>
   <div class="grid">
     <div class="grid">
       <label>
@@ -36,6 +41,7 @@
     Hashed Text + Salt
     <span clear-target="#pass_hash_out" class="clear_btn"></span>
     <span copy-target="#pass_hash_out" class="copy_btn"></span>
+    <span class="spinner htmx-indicator" id="pass_hash_spinner"></span>
     <textarea readonly id="pass_hash_out"></textarea>
   </label>
 </form>
