--- a/src/_templ/home/pass_hash_verify.html
+++ b/src/_templ/home/pass_hash_verify.html
@@ -1,4 +1,9 @@
-<form hx-post="/pass_hash_verify" hx-target="#pass_hash_verify_out" hx-swap="innerHTML">
+<form
+  hx-post="/pass_hash_verify"
+  hx-target="#pass_hash_verify_out"
+  hx-swap="innerHTML"
+  hx-indicator="#pass_hash_verify_spinner"
+>
   <div class="grid">
     <div class="grid">
       <label>
@@ -32,6 +37,7 @@
   <button type="submit">Verify</button>
   <div>
     <strong>Output :-</strong>
+    <span class="spinner htmx-indicator" id="pass_hash_verify_spinner"></span>
     <div id="pass_hash_verify_out"></div>
   </div>
 </form>
