--- a/src/_templ/_base.html
+++ b/src/_templ/_base.html
@@ -20,7 +20,7 @@
           href="https://github.com/shubhattin/hash_cryptography_tool"
           style="color: white"
           target="_blank"
-          data-tooltip="Source Code on Github"
+          data-tooltip="View Source Code on Github"
         >
           <svg hieght="26px" width="26px" viewBox="0 0 512 512">
             <g>
