--- a/src/_templ/home/hash.html
+++ b/src/_templ/home/hash.html
@@ -1,43 +1,38 @@
-<form
-  hx-post="/hash"
-  hx-target="#hash_out"
-  hx-swap="innerHTML"
-  hx-indicator="#hash_spinner"
->
-  <div class="grid">
+<form hx-post="/hash" hx-target="#hash_out" hx-swap="innerHTML" hx-indicator="#hash_spinner">
     <div class="grid">
-      <label>
-        <input type="radio" name="number" value="256" checked />
-        256
-      </label>
-      <label>
-        <input type="radio" name="number" value="512" />
-        512
-      </label>
+        <div class="grid">
+            <label>
+                <input type="radio" name="number" value="256" checked />
+                256
+            </label>
+            <label>
+                <input type="radio" name="number" value="512" />
+                512
+            </label>
+        </div>
+        <div class="grid">
+            <label>
+                <input type="radio" name="name" value="SHA" checked />
+                SHA
+            </label>
+            <label>
+                <input type="radio" name="name" value="SHA3" />
+                SHA3
+            </label>
+        </div>
     </div>
-    <div class="grid">
-      <label>
-        <input type="radio" name="name" checked value="SHA3" />
-        SHA3
-      </label>
-      <label>
-        <input type="radio" name="name" value="SHA" />
-        SHA
-      </label>
-    </div>
-  </div>
-  <small style="margin-top: 2px">
-    Hash of type 256 is of length 64 and of type 512 is of length 128.
-  </small>
-  <label>
-    Enter Text to Hash
-    <textarea name="text" id="hash_input" required></textarea>
-  </label>
-  <button type="submit">Sumbit</button>
-  <label>
-    Hashed Text <span clear-target="#hash_out" class="clear_btn"></span>
-    <span copy-target="#hash_out" class="copy_btn"></span>
-    <span class="spinner htmx-indicator" id="hash_spinner"></span>
-    <textarea readonly id="hash_out"></textarea>
-  </label>
+    <small style="margin-top: 2px">
+        Hash of type 256 is of length 64 and of type 512 is of length 128.
+    </small>
+    <label>
+        Enter Text to Hash
+        <textarea name="text" id="hash_input" required></textarea>
+    </label>
+    <button type="submit">Sumbit</button>
+    <label>
+        Hashed Text <span clear-target="#hash_out" class="clear_btn"></span>
+        <span copy-target="#hash_out" class="copy_btn"></span>
+        <span class="spinner htmx-indicator" id="hash_spinner"></span>
+        <textarea readonly id="hash_out"></textarea>
+    </label>
 </form>
