--- a/src/_templ/home/pass_hash_verify.html
+++ b/src/_templ/home/pass_hash_verify.html
@@ -1,43 +1,39 @@
-<form
-  hx-post="/pass_hash_verify"
-  hx-target="#pass_hash_verify_out"
-  hx-swap="innerHTML"
-  hx-indicator="#pass_hash_verify_spinner"
->
-  <div class="grid">
+<form hx-post="/pass_hash_verify" hx-target="#pass_hash_verify_out" hx-swap="innerHTML"
+    hx-indicator="#pass_hash_verify_spinner">
     <div class="grid">
-      <label>
-        <input type="radio" name="number" value="256" checked />
-        256
-      </label>
-      <label>
-        <input type="radio" name="number" value="512" />
-        512
-      </label>
+        <div class="grid">
+            <label>
+                <input type="radio" name="number" value="256" checked />
+                256
+            </label>
+            <label>
+                <input type="radio" name="number" value="512" />
+                512
+            </label>
+        </div>
+        <div class="grid">
+            <label>
+                <input type="radio" name="name" value="SHA" checked />
+                SHA
+            </label>
+            <label>
+                <input type="radio" name="name" value="SHA3" />
+                SHA3
+            </label>
+        </div>
     </div>
-    <div class="grid">
-      <label>
-        <input type="radio" name="name" checked value="SHA3" />
-        SHA3
-      </label>
-      <label>
-        <input type="radio" name="name" value="SHA" />
-        SHA
-      </label>
+    <label>
+        Enter Text
+        <textarea name="text" required></textarea>
+    </label>
+    <label>
+        Enter Hash
+        <textarea name="hash" required></textarea>
+    </label>
+    <button type="submit">Verify</button>
+    <div>
+        <strong>Output :-</strong>
+        <span class="spinner htmx-indicator" id="pass_hash_verify_spinner"></span>
+        <div id="pass_hash_verify_out"></div>
     </div>
-  </div>
-  <label>
-    Enter Text
-    <textarea name="text" required></textarea>
-  </label>
-  <label>
-    Enter Hash
-    <textarea name="hash" required></textarea>
-  </label>
-  <button type="submit">Verify</button>
-  <div>
-    <strong>Output :-</strong>
-    <span class="spinner htmx-indicator" id="pass_hash_verify_spinner"></span>
-    <div id="pass_hash_verify_out"></div>
-  </div>
 </form>
